<resources>
    <string name="app_name">ReallygoodApp</string>
    <string name="pleaseInput">请输入内容</string>
    <string name="user_actionbar_title">我</string>
    <string name="share_actionbar_title">社区</string>
    <string name="news_title_news">消息</string>
    <string name="news_title_notice">通知</string>
    <string name="user_name">昵称</string>
    <string name="user_log">个性签名</string>
    <string name="user_info_actionbar_title">个人信息</string>
    <string name="user_chat_actionbar_title">我的分享</string>
    <string name="user_resume_actionbar_title">我的简历</string>
    <string name="user_agent_actionbar_title">我的代理</string>
    <string name="user_ability_actionbar_title">我的能力</string>
    <string name="user_collect_actionbar_title">我的收藏</string>
    <string name="user_setting_actionbar_title">设置</string>
    <string name="exit">退出登录</string>
    <string name="user_setting_about_school">东莞理工学院</string>
    <string name="user_setting_about_department">计算机与网络安全系</string>
    <string name="user_setting_about_class">2013软件工程1班</string>
    <string name="user_setting_about_person">钟德新</string>
    <string name="user_setting_about_time">此为毕业设计，制于2017年2月到毕业前夕</string>
    <string name="user_setting_about_actionbar_title">关于</string>
    <string name="share_nvmenu_all">全部</string>
    <string name="share_nvmenu_externalschool">外校</string>
    <string name="share_nvmenu_school">本校</string>
    <string name="share_nvmenu_friend">朋友</string>
    <string name="share_nvmenu_schoolname">东莞理工</string>
    <string name="share_nvmenu_group1_title">只看</string>
    <string name="home_name">首页</string>
    <string name="home_navigation_text_parttimejob">兼职</string>
    <string name="home_navigation_text_schoolrecruit">校园招聘</string>
    <string name="home_navigation_text_experiwnce">经验攻略</string>
    <string name="home_navigation_text_organization">校园社团</string>
    <string name="home_hot_parttimejob">热门兼职</string>
    <string name="home_hot_parttimejob_jobname">兼职名</string>
    <string name="home_hot_parttimejob_money">薪酬</string>
    <string name="home_hot_company">人气公司</string>
    <string name="home_foot_text">已经到底了</string>
    <string name="parttimejob_navigation_collect">收藏</string>
    <string name="parttimejob_navigation_chooseall">全选</string>
    <string name="parttimejob_navigation_apply">申请</string>
    <string name="parttimejob_actionbar_findwork">找兼职</string>
    <string name="parttimejob_actionbar_doagent">做代理</string>
    <string name="parttimejob_actionbar_employperson">我要招人</string>
    <string name="parttimejob_switch_detail_simple">简洁</string>
    <string name="parttimejob_switch_switch">筛选</string>
    <string name="parttimejob_switch_detail_complex">详细</string>
    <string name="parttimejob_recyclerview_item_jobname">工作名</string>
    <string name="parttimejob_recyclerview_item_company">公司名</string>
    <string name="parttimejob_recyclerview_item_money">薪酬</string>
    <string name="parttimejob_recyclerview_item_workplace">工作市镇</string>
    <string name="parttimejob_recyclerview_item_education">学历</string>
    <string name="parttimejob_recyclerview_item_companytype">公司类型</string>
    <string name="parttimejob_recyclerview_item_time">发布时间</string>
    <string name="parttimejob_recyclerview_item_describe">描述</string>
    <string name="employperson_actionbar_titile">发布兼职</string>
    <string name="amployperson_step_info">兼职信息</string>
    <string name="employperson_step_address">地址详情</string>
    <string name="employperson_step_send">发布</string>
    <string name="employperson_step_next">下一步</string>
    <string name="employperson_infofragment_jobname">兼职：</string>
    <string name="employperson_infofargment_jobname_hint">你要发布的兼职</string>
    <string name="employperson_infofragment_number">人数：</string>
    <string name="employperson_infofragment_number_hint">人数</string>
    <string name="employperson_infofragment_education">学历：</string>
    <string name="employperson_infofragment_education_hint">要求的文化水平</string>
    <string name="employperson_infofragment_payment">薪酬：</string>
    <string name="employperson_infofragment_payment_hint">发放工资多少</string>
    <string name="employperson_infofragment_request">工作描述</string>
    <string name="employperson_infofragment_type">类别：</string>
    <string name="employperson_infofragment_type_hint">该兼职的类别</string>
    <string name="employperson_infofragment_jobtypeactivity_actionbar_title">选择类型</string>
    <string name="employperson_infofragment_jobtypeactivity_actionbar_ok">确定</string>
    <string name="employperson_addressfragment_address">工作地址：</string>
    <string name="employperson_addressfragment_address_hint">省/市(县)/镇</string>
    <string name="employperson_addressfragment_address_hint_detail">详细地址</string>
    <string name="employperson_addressfragment_request_hint">工作具体要求</string>
    <string name="employperson_addressfragment_recruitaddress_hint">招聘地区</string>
    <string name="employperson_addressfragment_recruitaddress">招聘地区：</string>
    <string name="employperson_addressfragment_noticestudent">通知成为好友的在校生</string>
    <string name="employperson_choosefragment_cancel">取消</string>
    <string name="employperson_choosefragment_ok">确定</string>
    <string name="chooseplaceactivity_actionbar_title">选择地区</string>
    <string name="jobinfo_jobname">工作名称</string>
    <string name="jobinfo_time">发布时间</string>
    <string name="jobinfo_money">薪酬</string>
    <string name="jobinfo_workplace">工作地点</string>
    <string name="jobinfo_employperson">招募人数</string>
    <string name="jobinfo_education">学历</string>
    <string name="jobinfo_workplace_detail">详细工作地点</string>
    <string name="jobinfo_workplace_detail_title">上班地址</string>
    <string name="jobinfo_companyname">公司名称</string>
    <string name="jobinfo_companytype">公司类型</string>
    <string name="jobinfo_companyperson">公司人数</string>
    <string name="jobinfo_companyindustry">公司行业</string>
    <string name="jobinfo_describe">描述</string>
    <string name="jobinfo_describe_title">职位描述</string>
    <string name="jobinfo_actionbartitle">职位信息</string>
    <string name="jobinfo_collecy">收藏</string>
    <string name="jobinfo_apply">申请</string>
    <string name="jobinfo_apply_job">工作职位</string>
    <string name="jobinfo_apply_agent">成为代理人</string>
    <string name="user_info_avatar_actionbar_title">个人头像</string>
    <string name="user_info_avatar_more_shot">拍照</string>
    <string name="user_info_avatar_more_album">从相册选择</string>
    <string name="user_info_avatar_more_save">保存图片</string>
    <string name="user_info_avatar_more_cancel">取消</string>
    <string name="user_info_name_actionbar_title">昵称</string>
    <string name="user_info_name_actionbar_ok">完成</string>
    <string name="user_info_name_input_hint">请输入昵称</string>
    <string name="user_info_log_actionbar_title">个性签名</string>
    <string name="user_info_log_actionbar_ok">完成</string>
    <string name="user_info_log_input_hint">请输入个性签名</string>
    <string name="user_chat_titlelayout_chat">我的吐槽</string>
    <string name="user_chat_titlelayout_article">我的文章</string>
    <string name="user_resume_clicklayout_info">基本信息</string>
    <string name="user_resume_infonull_text">你的基本信息未完善</string>
    <string name="user_resume_info_name">姓名</string>
    <string name="user_resume_info_sex">性别</string>
    <string name="user_resume_info_birthday">出生年月</string>
    <string name="user_resume_info_telephone">电话</string>
    <string name="user_resume_info_address">居住地</string>
    <string name="user_resume_info_school">学校</string>
    <string name="user_resume_clicklayout_workexperience">工作经验</string>
    <string name="user_resume_clicklayout_school">在校情况</string>
    <string name="user_resume_nullitem_workexperience">尚未添加工作经验</string>
    <string name="user_resume_nullitem_school_honor">尚未添加校内荣誉</string>
    <string name="user_resume_nullitem_school_post">尚未添加校内职务</string>
    <string name="user_resume_list_time">时间</string>
    <string name="user_resume_list_name">名称</string>
    <string name="user_resume_list_post">职务</string>
    <string name="user_resume_infoactivity_actionbar_title">编辑基本信息</string>
    <string name="user_resume_infoactivity_actionbar_ok">保存</string>
    <string name="user_resume_infoactivity_name">姓名</string>
    <string name="user_resume_infoactivity_namehint">请输入姓名</string>
    <string name="user_resume_infoactivity_sex">性别</string>
    <string name="user_resume_infoactivity_birthday">出生年月</string>
    <string name="user_resume_infoactivity_birthdayhint">请选择</string>
    <string name="user_resume_infoactivity_telephone">电话号码</string>
    <string name="user_resume_infoactivity_teltphonehint">请输入电话号码</string>
    <string name="user_resume_infoactivity_address">居住地</string>
    <string name="user_resume_infoactivity_addresshint">请选择地址</string>
    <string name="user_resume_infoactivity_school">学校</string>
    <string name="user_resume_infoactivity_schoolhint">请输入学校</string>
    <string name="user_resume_infoactivity_male">男</string>
    <string name="user_resume_infoactivity_female">女</string>
    <string name="user_resume_workexperienceactivity_actionbar_title">工作经验</string>
    <string name="user_resume_workexperienceactivity_actionbar_edit">编辑</string>
    <string name="user_resume_workexperienceactivity_addlayout_text">添加工作经验</string>
    <string name="user_resume_workexperience_addactivity_actionbar_title">添加工作经验</string>
    <string name="user_resume_workexperience_addactivity_actionbar_save">保存</string>
    <string name="user_resume_workexperience_addactivity_entry">入职时间</string>
    <string name="user_resume_workexperience_addactivity_entryhint">入职时间</string>
    <string name="user_resume_workexperience_addactivity_leave">离职时间</string>
    <string name="user_resume_workexperience_addactivity_leavehint">离职时间</string>
    <string name="user_resume_workexperience_addactivity_companyname">公司</string>
    <string name="user_resume_workexperience_addactivity_companynamehint">请输入公司名</string>
    <string name="user_resume_workexperience_addactivity_job">职位</string>
    <string name="user_resume_workexperience_addactivity_jobhint">请输入职位名</string>
    <string name="user_resume_workexperience_addactivity_describe">工作描述</string>
    <string name="user_resume_workexperience_addactivity_jobtype">工作类型</string>
    <string name="user_resume_workexperience_addactivity_jobtype_quanzhi">全职</string>
    <string name="user_resume_workexperience_addactivity_jobtype_jianzhi">兼职</string>
    <string name="user_resume_workexperience_add_describeactivity_actionbar_title">职位描述</string>
    <string name="user_resume_workexperience_add_describeactivity_actionbar_finish">完成</string>
    <string name="user_resume_workexperience_add_describeactivity_describehint">请详细描述你的职责范围、工作任务以及取得的成绩等</string>
    <string name="user_resume_workexperience_add_describeactivity_describetip">0</string>
    <string name="user_resume_workexperience_add_describeactivity_describenumber">/500</string>
    <string name="user_resume_school_actionbar_title_honor">校内荣誉</string>
    <string name="user_resume_school_actionbar_title_post">校内职务</string>
    <string name="user_resume_school_actionbar_tile">校内情况</string>
    <string name="user_resume_school_honor_addactivity_actionbar_title">添加校内荣誉</string>
    <string name="user_resume_school_honor_addactivity_actionbar_save">保存</string>
    <string name="user_resume_school_honor_addactivity_time">时间</string>
    <string name="user_resume_school_honor_addactivity_timehint">请选择</string>
    <string name="user_resume_school_honor_addactivity_prize">奖项</string>
    <string name="user_resume_school_honor_addactivity_prizehint">请填写</string>
    <string name="user_resume_school_honor_addactivity_level">级别</string>
    <string name="user_resume_school_honor_addactivity_levelhint">请填写级别,如:A级</string>
    <string name="share_sendactivity_title">发布随想</string>
    <string name="share_sendactivity_talkhint">这一刻的想法…</string>
    <string name="share_sendactivity_sendbt">发送</string>
</resources>