<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/share_nvmenu_group1_title">
        <menu>
            <item
                android:id="@+id/share_nvmenu_group1_all"
                android:checkable="true"
                android:icon="@drawable/share_menu_all"
                android:title="@string/share_nvmenu_all" />
            <item
                android:id="@+id/share_nvmenu_group1_externalschool"
                android:checkable="true"
                android:icon="@drawable/share_menu_externalschool"
                android:title="@string/share_nvmenu_externalschool" />
            <item
                android:id="@+id/share_nvmenu_group1_school"
                android:checkable="true"
                android:icon="@drawable/share_menu_school"
                android:title="@string/share_nvmenu_school" />
            <item
                android:id="@+id/share_nvmenu_group1_friend"
                android:checkable="true"
                android:icon="@drawable/share_menu_friend"
                android:title="@string/share_nvmenu_friend" />
        </menu>
    </item>
</menu>