<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--actionbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbarheight"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/usersetting_about_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/actionbar_imageheight_small"
                android:layout_height="@dimen/actionbar_imageheight_small"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_setting_actionbar_title"
                android:textColor="@color/white"
                android:textSize="@dimen/actionbar_textviewtextsize" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_setting_about_actionbar_title"
            android:textColor="@color/white"
            android:textSize="@dimen/actionbar_titletextsize" />

    </RelativeLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textSize="@dimen/usersetting_about_text"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_setting_about_school" />

        <TextView
            android:textSize="@dimen/usersetting_about_text"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_setting_about_department" />

        <TextView
            android:textSize="@dimen/usersetting_about_text"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_setting_about_class" />

        <TextView
            android:textSize="@dimen/usersetting_about_text"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_setting_about_person" />

        <TextView
            android:textSize="@dimen/usersetting_about_text"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_setting_about_time" />

    </LinearLayout>
</RelativeLayout>
