<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userresume_infoactivity_mainlayout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--actionbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbarheight"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/userresume_infoactivity_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/actionbar_imageheight_small"
                android:layout_height="@dimen/actionbar_imageheight_small"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_resume_actionbar_title"
                android:textColor="@color/white"
                android:textSize="@dimen/actionbar_textviewtextsize" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_resume_infoactivity_actionbar_title"
            android:textColor="@color/white"
            android:textSize="@dimen/actionbar_titletextsize" />

        <Button
            android:id="@+id/userresume_infoactivity_ok"
            android:layout_width="@dimen/userresume_infoactivity_okwidth"
            android:layout_height="@dimen/userresume_infoactivity_okheight"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="0dp"
            android:text="@string/user_resume_infoactivity_actionbar_ok"
            android:textColor="@color/black" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/userresume_infoactivity_layoutheight"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_resume_infoactivity_name"
                android:textColor="@color/black"
                android:textSize="@dimen/userresume_infoactivity_layouttextsize" />

            <EditText
                android:id="@+id/userresume_infoactivity_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/white"
                android:gravity="end|center_vertical"
                android:hint="@string/user_resume_infoactivity_namehint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/userresume_infoactivity_layouttextsize" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/userresume_infoactivity_layoutheight"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_resume_infoactivity_birthday"
                android:textColor="@color/black"
                android:textSize="@dimen/userresume_infoactivity_layouttextsize" />

            <RelativeLayout
                android:id="@+id/userresume_infoactivity_birthdaylayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/userresume_infoactivity_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:hint="@string/user_resume_infoactivity_birthdayhint"
                    android:textSize="@dimen/userresume_infoactivity_layouttextsize" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/userresume_infoactivity_layoutheight"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_resume_infoactivity_telephone"
                android:textColor="@color/black"
                android:textSize="@dimen/userresume_infoactivity_layouttextsize" />

            <EditText
                android:id="@+id/userresume_infoactivity_telephone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/white"
                android:gravity="end|center_vertical"
                android:hint="@string/user_resume_infoactivity_teltphonehint"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/userresume_infoactivity_layoutheight"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_resume_infoactivity_address"
                android:textColor="@color/black"
                android:textSize="@dimen/userresume_infoactivity_layouttextsize" />

            <RelativeLayout
                android:id="@+id/userresume_infoactivity_addresslayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/userresume_infoactivity_address"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:hint="@string/user_resume_infoactivity_addresshint"
                    android:textColor="@color/black"
                    android:textSize="@dimen/userresume_infoactivity_layouttextsize" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/userresume_infoactivity_layoutheight"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_resume_infoactivity_school"
                android:textColor="@color/black"
                android:textSize="@dimen/userresume_infoactivity_layouttextsize" />

            <EditText
                android:id="@+id/userresume_infoactivity_school"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/white"
                android:gravity="end|center_vertical"
                android:hint="@string/user_resume_infoactivity_schoolhint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/userresume_infoactivity_layouttextsize" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>