<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/gray_10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbarheight"
        android:background="@color/black_blue">

        <ImageView
            android:id="@+id/share_sendactivity_back"
            android:layout_width="@dimen/actionbar_imageheight"
            android:layout_height="@dimen/actionbar_imageheight"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/share_sendactivity_title"
            android:textColor="@color/white"
            android:textSize="@dimen/actionbar_titletextsize" />

        <TextView
            android:id="@+id/share_sendactivity_send"
            android:textSize="@dimen/actionbar_textviewtextsize"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/share_sendactivity_sendbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <EditText
        android:id="@+id/share_sendactivity_edit"
        android:textSize="@dimen/share_sendactivity_textsize"
        android:textColor="@color/black"
        android:inputType="textMultiLine"
        android:hint="@string/share_sendactivity_talkhint"
        android:gravity="top|start"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/share_sendactivity_edittextheight" />

</LinearLayout>